# enhanced_multiview_registration

./: .gitignore  .gitmodules  CMakeLists.txt
data/: 2-filter.pcd
include/: FRICP.h  ICP.h  complement_lie.h  data_prepare.h  icp-ceres.h  icp_ceres.h  icp_ipopt.h  nanoflann.hpp  obb_box.h  pairwise_ICP.h  robust_cost_grad.h  robust_function.h  robust_registration.h  sophus_se3.h
src/: CMakeLists.txt  icp_ceres.cpp  icp_ipopt.cpp  main.cpp  obb_box.cpp  pairwise_ICP.cpp  robust_registration.cpp
